Date	Added
01/05
        * Reset all skill variables if the skill fails so certain skills can't be
          abused (such as Warp, thanks to Alex14 for pointing it out) [celest]
        * Added /mapflag/noreturn.txt for disabling butterfly wings (not fly wings)
          [celest]
        * Fixed skill_require_db reading somehow getting corrupted if weapons usable
          for the skill is more than 20, thus causing the skills to fail everytime 
          [celest]
        * Fixed @killmonster crashing the server with summoned monsters, thanks to 
          Alex14 [celest]
        * Added double_connection_system to battle_athena (not completed yet) [celest]

01/04
	* Fixed GM Command Logging (Not sure why TXT logging still isn't working properly :( ) [Codemaster] [SVN 907]
	* Fixed one of Lupus' additions to the item_db [Codemaster] [SVN 907]
        * Fixed Seismic Weapon Skill (it 100% didn't break target's weapon at 4 level of the skill) [Lupus]

01/02
        * Re-fixed map-server crashing if an empty line is in skill_castnodex.txt,
          thanks to Alex14 for pointing it out (SVN 899) [celest]
        * Modified breaking rates calculating - meltdown's chances is separated from
          self breaking chances (SVN 900)  [celest]
        * Reduced MAX_SKILL_LEVEL to 10 to save a bit of memory and speed [celest]
        * Tidied up parts in skill_castfix a bit (SVN 895) [celest]
        * Fixed map-server crashing if an empty line was added in any of the skill-xx
          db files  (SVN 895) [celest]
        * Updated skill_castnodex reading - An *optional* 3rd value can be added to set
          whether a skill's delay time can be affected by dex  (SVN 895) [celest]
          Example: 46,1,1 - double strafe's delay is not affected by dex
                   46,1,0:0:0:0:1 - only level 5 double strafe is not affected by dex
	* More atempts at memory leak fixes [Codemaster] [SVN 890]