@@ -176,7 +176,7 @@ item_rate_1000_min: 1000
 item_rate_1000_max: 10000
 
 // Can the monster's drop rate become 0? (Note 1)
-drop_rate0item: no
+drop_rate0item: yes
 
 // Rate at which exp. is given. (Note 2)
 base_exp_rate: 100
